--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
     "dependencies": {
         "antd-mobile": "^2.0.1-alpha.0",
         "autoprefixer": "7.1.6",
+        "axios": "^0.18.0",
         "babel-core": "6.26.0",
         "babel-eslint": "7.2.3",
         "babel-jest": "20.0.3",
         "babel-loader": "7.1.2",
         "babel-plugin-import": "^1.6.7",
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-preset-react-app": "^3.1.1",
         "babel-runtime": "6.26.0",
         "case-sensitive-paths-webpack-plugin": "2.1.1",
         "chalk": "1.1.3",
+        "cookie-parser": "^1.4.3",
         "css-loader": "0.28.7",
         "dotenv": "4.0.0",
         "dotenv-expand": "4.2.0",
@@ -39,7 +42,10 @@
         "react": "^16.2.0",
         "react-dev-utils": "^5.0.0",
         "react-dom": "^16.2.0",
+        "react-redux": "^5.0.7",
+        "react-router-dom": "^4.2.2",
         "redux": "^3.7.2",
+        "redux-thunk": "^2.2.0",
         "style-loader": "0.19.0",
         "sw-precache-webpack-plugin": "0.11.4",
         "url-loader": "0.6.2",
@@ -92,10 +98,18 @@
             "react-app"
         ],
         "plugins": [
-            ["import", { "libraryName": "antd-mobile", "style": "css" }]
+            [
+                "import",
+                {
+                    "libraryName": "antd-mobile",
+                    "style": "css"
+                }
+            ],
+            "transform-decorators-legacy"
         ]
     },
     "eslintConfig": {
         "extends": "react-app"
-    }
+    },
+    "proxy": "http://localhost:9093"
 }
